--- a/mobilelele/src/main/resources/templates/auth-register.html
+++ b/mobilelele/src/main/resources/templates/auth-register.html
@@ -21,16 +21,18 @@
     <h2 class="text-center text-white">Register User</h2>
     <form th:action="@{/users/register}"
           th:method="post"
+          th:object="${userModel}"
           class="main-form mx-auto col-md-8 d-flex flex-column justify-content-center">
         <div class="row">
             <div class="form-group col-md-6 mb-3">
                 <label for="firstName" class="text-white font-weight-bold">First Name</label>
                 <input id="firstName"
-                       name="firstName"
+                       th:field="*{firstName}"
+                       th:errorclass="is-invalid"
                        type="text" min="2" max="20" class="form-control"
                        placeholder="First name"/>
-                <p class="errors alert alert-danger">
-                    First name is required.
+                <p class="invalid-feedback errors alert alert-danger">
+                    First name is required and should be between 2 and 20 symbols.
                 </p>
             </div>
             <div class="form-group col-md-6 mb-3">
@@ -63,6 +65,14 @@
                        placeholder="Password"/>
                 <p class="errors alert alert-danger">
                     Password is required.
+                </p>
+            </div>
+        </div>
+
+        <div th:if="${userNameOccupied}" class="row">
+            <div class="form-group col-md-12 mb-6">
+                <p class="errors alert alert-danger">
+                    Username is occupied.
                 </p>
             </div>
         </div>
