--- a/mobilelele/src/main/resources/templates/details.html
+++ b/mobilelele/src/main/resources/templates/details.html
@@ -37,6 +37,7 @@
                     <div class="card-text"><span th:text="|Offer created: *{created}|">• Offer created</span></div>
                     <div class="card-text"><span th:text="|Offer modified: *{modified}|">• Offer modified</span></div>
                     <div class="card-text"><span th:text="|Seller: *{sellerFullName}|">• Seller - First and Last name</span></div>
+                    <div class="card-text"><span th:text="|Comments: *{description}|">• Description</span></div>
                 </li>
             </ul>
             <div class="card-body">
@@ -44,7 +45,7 @@
                 <a class="card-link" href="/">Delete</a>
             </div>
         </div>
-        <div class="offer card col-sm-2 col-md-3  col-lg-4 m-1 p-1">
+        <div class="offer card col-sm-2 col-md-3  col-lg-4 m-1 p-0">
             <img class="card-img-top" th:src="*{offer.getImageUrl()}" alt="Car image">
         </div>
     </div>
