--- a/pathfinder/src/main/resources/templates/route-details.html
+++ b/pathfinder/src/main/resources/templates/route-details.html
@@ -43,7 +43,7 @@
                 </form>
             </div>
         </section>
-        <section id="map"></section>
+        <section  id="map">Map</section>
         <section id="video">
             <iframe id="frame" th:src="'https://www.youtube.com/embed/'+*{videoUrl}">
             </iframe>
