--- a/mobilelele/src/main/resources/templates/details.html
+++ b/mobilelele/src/main/resources/templates/details.html
@@ -22,7 +22,7 @@
     <h2 class="text-center text-white mt-5">Details</h2>
     <div class="offers row mx-auto d-flex flex-row justify-content-center">
         <div th:object="${offer}"
-                class="offer card col-sm-2 col-md-3  col-lg-4 m-1 p-0">
+             class="offer card col-sm-2 col-md-3  col-lg-4 m-1 p-0">
 
             <div class="card-body pb-1">
                 <h5 class="card-title" th:text="*{year} + ' ' + *{brand} + ' ' + *{model}">
@@ -33,16 +33,24 @@
                     <div class="card-text"><span th:text="|Mileage: *{mileage}|">• Mileage</span></div>
                     <div class="card-text"><span th:text="|Price: *{price}|">• Price</span></div>
                     <div class="card-text"><span th:text="|Engine type: *{engine}|">• Engine type</span></div>
-                    <div class="card-text"><span th:text="|Transmission type: *{transmission}|">• Transmission type</span></div>
+                    <div class="card-text"><span
+                            th:text="|Transmission type: *{transmission}|">• Transmission type</span></div>
                     <div class="card-text"><span th:text="|Offer created: *{created}|">• Offer created</span></div>
                     <div class="card-text"><span th:text="|Offer modified: *{modified}|">• Offer modified</span></div>
-                    <div class="card-text"><span th:text="|Seller: *{sellerFullName}|">• Seller - First and Last name</span></div>
+                    <div class="card-text"><span
+                            th:text="|Seller: *{sellerFullName}|">• Seller - First and Last name</span></div>
                     <div class="card-text"><span th:text="|Comments: *{description}|">• Description</span></div>
                 </li>
             </ul>
             <div class="card-body">
-                <a class="card-link" href="/">Update</a>
-                <a class="card-link" href="/">Delete</a>
+                <div class="row">
+                    <a class="btn btn-link" th:href="@{/offers/{id}/edit(id=*{id})}">Update</a>
+
+                    <form th:action="@{/offers/{id}(id=*{id})}"
+                          th:method="delete">
+                    <input type="submit" class="btn btn-link" value="Delete"/>
+                    </form>
+                </div>
             </div>
         </div>
         <div class="offer card col-sm-2 col-md-3  col-lg-4 m-1 p-0">
