--- a/mobilelele/src/main/resources/templates/update.html
+++ b/mobilelele/src/main/resources/templates/update.html
@@ -19,29 +19,48 @@
 </div>
 
 
-<div class="container">
+<div class="container"  >
     <h2 class="text-center text-white">Update Offer</h2>
-    <form method="POST"
+    <form th:object="${offerModel}"
+          th:action="@{/offers/{id}/edit(id=*{id})}"
+          th:method="patch"
           class="main-form mx-auto col-md-8 d-flex flex-column justify-content-center">
         <div class="row">
 
-            <div class="form-group col-md-6 mb-3">
+            <div  class="form-group col-md-6 mb-3" >
                 <label class="text-center text-white font-weight-bold" for="model">Model</label>
-                <select id="model" class="form-control">
-                    <option value="">- Select a model -</option>
-                    <optgroup label="Brand name">
+                <select id="model"
+                        class="form-control" disabled>
+                    <option value="" >- Select a model -</option>
+                    <optgroup label="Brand name" >
                         <option>Model</option>
                     </optgroup>
                 </select>
-                <p class="errors alert alert-danger">
-                    Vechicle model is required.
+<!--                <p class="errors alert alert-danger">-->
+<!--                    Vechicle model is required.-->
+<!--                </p>-->
+            </div>
+            <div class="form-group col-md-6 mb-3" >
+                <label for="mileage" class="text-white font-weight-bold">Mileage</label>
+                <input
+                        id="mileage"
+                        th:field="*{mileage}"
+                        th:errorclass="is-invalid"
+                        type="number" min="0" max="900000" step="50"
+                        class="form-control"
+                        placeholder="Mileage in kilometers"/>
+                <p class="invalid-feedback errors alert alert-danger">
+                    Mileage in kilometers is required.
                 </p>
             </div>
             <div class="form-group col-md-6 mb-3">
                 <label for="price" class="text-white font-weight-bold">Price</label>
-                <input id="price" type="number" min="0" step="100" class="form-control"
+                <input id="price"
+                       th:field="*{price}"
+                       th:errorclass="is-invalid"
+                       type="number" min="0" step="10" class="form-control"
                        placeholder="Suggested price"/>
-                <p class="errors alert alert-danger">
+                <p class="invalid-feedback errors alert alert-danger">
                     Suggested price is required.
                 </p>
             </div>
@@ -49,24 +68,39 @@
         <div class="row">
             <div class="form-group col-md-6 mb-3">
                 <label class="text-center text-white font-weight-bold" for="engine">Engine</label>
-                <select id="engine" class="form-control">
+                <select id="engine"
+                        th:name="engine"
+                        th:errorclass="is-invalid"
+                        class="form-control">
                     <option value="">- Select engine type -</option>
-                    <option>
-                        Engine type
+                    <option th:each="anEngine : ${engines}"
+                            th:value="${anEngine}"
+                            th:text="${anEngine}"
+                            th:selected="${anEngine} == *{engine}"
+                    >Engine Type
                     </option>
+
+
                 </select>
-                <p class="errors alert alert-danger">
+                <p class="invalid-feedback errors alert alert-danger">
                     Engine type is required.
                 </p>
             </div>
             <div class="form-group col-md-6 mb-3">
                 <label class="text-center text-white font-weight-bold" for="transmission">Transmission</label>
-                <select id="transmission" class="form-control">
+                <select id="transmission"
+                        th:name="transmission"
+                        th:errorclass="is-invalid"
+                        class="form-control">
                     <option value="">- Select transmission type -</option>
-                    <option> Transmission type
+                    <option th:each="tr : ${transmissions}"
+                            th:value="${tr}"
+                            th:text="${tr}"
+                            th:selected="${tr} == *{transmission}"
+                    > Transmission type
                     </option>
                 </select>
-                <p class="errors alert alert-danger">
+                <p class="invalid-feedback errors alert alert-danger">
                     Transmission type is required.
                 </p>
             </div>
@@ -74,36 +108,39 @@
         <div class="row">
             <div class="form-group col-md-6 mb-3">
                 <label for="year" class="text-white font-weight-bold">Year</label>
-                <input id="year" type="number" min="1900" max="2099" step="1" class="form-control"
-                       placeholder="Manufacturing year"/>
-                <p class="errors alert alert-danger">
+                <input
+                        id="year"
+                        th:field="*{year}"
+                        th:errorclass="is-invalid"
+                        type="number" min="1900" max="2099" step="1" class="form-control"
+                        placeholder="Manufacturing year"/>
+                <p class="invalid-feedback errors alert alert-danger">
                     Manufacturing year is required.
                 </p>
             </div>
-            <div class="form-group col-md-6 mb-3">
-                <label for="mileage" class="text-white font-weight-bold">Mileage</label>
-                <input id="mileage" type="number" min="0" max="900000" step="1000"
-                       class="form-control"
-                       placeholder="Mileage in kilometers"/>
-                <p class="errors alert alert-danger">
-                    Mileage in kilometers is required.
-                </p>
-            </div>
+
         </div>
 
         <div class="form-group">
             <label class="text-white font-weight-bold" for="description">Description</label>
-            <textarea id="description" type="textarea" class="form-control" rows="3"
+            <textarea id="description"
+                      th:field="*{description}"
+                      th:errorclass="is-invalid"
+                      type="textarea" class="form-control" rows="3"
                       placeholder="Description"></textarea>
-            <p class="errors alert alert-danger">
+            <p class="invalid-feedback errors alert alert-danger">
                 Description is required.
             </p>
         </div>
         <div class="form-group">
             <label class="text-white font-weight-bold" for="imageUrl">Image URL</label>
-            <input id="imageUrl" type="url" class="form-control"
+            <input id="imageUrl"
+                   th:errorclass="is-invalid"
+                   th:field="*{imageUrl}"
+
+                   type="url" class="form-control"
                    placeholder="Put vehicle image URL here">
-            <p class="errors alert alert-danger">
+            <p class="invalid-feedback errors alert alert-danger">
                 Vehicle image URL is required.
             </p>
         </div>
