--- a/ex.prep.coffeeshop/src/main/resources/templates/login.html
+++ b/ex.prep.coffeeshop/src/main/resources/templates/login.html
@@ -41,7 +41,7 @@
                                aria-describedby="passwordHelpInline" placeholder="Password">
                         <small th:if="${#fields.hasErrors('password')}" th:errors="*{password}" id="passwordHelpInline"
                                class=" bg-danger text-light rounded">
-                            Password length must be more than 3 characters.
+                            Password length must be more than 3 symbols
                         </small>
                     </div>
                 </div>
