--- a/ex.prep.coffeeshop/src/main/resources/templates/order-add.html
+++ b/ex.prep.coffeeshop/src/main/resources/templates/order-add.html
@@ -53,7 +53,7 @@
 
 
                         </select>
-                        <small id="categoryHelpInline" class="invalid-feedback bg-danger text-light rounded">
+                        <small th:if="${#fields.hasErrors('category')}" th:errors="*{category}" id="categoryHelpInline" class="invalid-feedback bg-danger text-light rounded">
                             You must select the category.
                         </small>
                     </div>
