--- a/ex.prep.gira/src/main/resources/templates/register.html
+++ b/ex.prep.gira/src/main/resources/templates/register.html
@@ -3,56 +3,65 @@
 <head th:replace="fragments/common::head"></head>
 
 <body>
-  <div class="page-container">
+<div class="page-container">
     <header th:replace="fragments/common::navlog"></header>
 
     <main class="content-wrap">
-      <h1 class="text-center mt-2"><span class="badge badge-pill badge-dark">Register</span></h1>
-      <hr class="hr-3 w-25 bg-white" />
-      <form th:object="${userRegisterBindingModel}" class="mx-auto w-25 bg-blur" th:method="post" th:action="@{/users/register}">
-        <div class="form-group">
-          <div class="label-holder textCol d-flex justify-content-center">
-            <label for="username" class="h4 mb-2">Username</label>
-          </div>
-          <input th:field="*{username}" th:errorclass="bg-danger" type="text" class="form-control" id="username" name="username" />
-          <small th:if="${#fields.hasErrors('username')}" th:errors="*{username}" class=" text-danger">Username error message</small>
-        </div>
-        <div class="form-group">
-          <div class="label-holder textCol d-flex justify-content-center">
-            <label for="email" class="h4 mb-2">Email</label>
-          </div>
-          <input th:field="*{email}" th:errorclass="bg-danger" type="email" class="form-control" id="email" name="email" />
+        <h1 class="text-center mt-2"><span class="badge badge-pill badge-dark">Register</span></h1>
+        <hr class="hr-3 w-25 bg-white"/>
+        <form th:object="${userRegisterBindingModel}" class="mx-auto w-25 bg-blur" th:method="post"
+              th:action="@{/users/register}">
+            <div class="form-group">
 
-          <small th:if="${#fields.hasErrors('email')}" th:errors="*{email}"  class="text-danger">Email error message</small>
-        </div>
-        <div class="form-group">
-          <div class="label-holder  textCol d-flex justify-content-center">
-            <label for="password" class="h4 mb-2">Password</label>
-          </div>
-          <input th:field="*{password}" th:errorclass="bg-danger" type="password" class="form-control" id="password" name="password" />
-          <small th:if="${#fields.hasErrors('password')}" th:errors="*{password}"  class="text-danger">Password error message</small>
-        </div>
-        <div class="form-group">
-          <div class="label-holder  textCol d-flex justify-content-center">
-            <label for="confirmPassword" class="h4 mb-2">Confirm Password</label>
-          </div>
-          <input th:field="*{confPassword}"  type="password" class="form-control" id="confirmPassword" name="confirmPassword" />
-        </div>
+                <div class="label-holder textCol d-flex justify-content-center">
+                    <label for="username" class="h4 mb-2">Username</label>
+                </div>
+                <input th:field="*{username}" th:errorclass="bg-danger" type="text" class="form-control" id="username"
+                       name="username"/>
+                <small th:if="${#fields.hasErrors('username')}" th:errors="*{username}" class=" text-danger">Username
+                    error message</small>
+            </div>
+            <div class="form-group">
+                <div class="label-holder textCol d-flex justify-content-center">
+                    <label for="email" class="h4 mb-2">Email</label>
+                </div>
+                <input th:field="*{email}" th:errorclass="bg-danger" type="email" class="form-control" id="email"
+                       name="email"/>
 
-        <div class="button-holder d-flex justify-content-center">
-          <button type="submit" class="button btn-warning  mb-3" value="Register">Register</button>
-        </div>
+                <small th:if="${#fields.hasErrors('email')}" th:errors="*{email}" class="text-danger">Email error
+                    message</small>
+            </div>
+            <div class="form-group">
+                <div class="label-holder  textCol d-flex justify-content-center">
+                    <label for="password" class="h4 mb-2">Password</label>
+                </div>
+                <input th:field="*{password}" th:errorclass="bg-danger" type="password" class="form-control"
+                       id="password" name="password"/>
+                <small th:if="${#fields.hasErrors('password')}" th:errors="*{password}" class="text-danger">Password
+                    error message</small>
+            </div>
+            <div class="form-group">
+                <div class="label-holder  textCol d-flex justify-content-center">
+                    <label for="confirmPassword" class="h4 mb-2">Confirm Password</label>
+                </div>
+                <input th:field="*{confPassword}" type="password" class="form-control" id="confirmPassword"
+                       name="confirmPassword"/>
+            </div>
 
-        <h2 th:if="${userNameOrEmailIsOccupied}" class="mt-5 text-center">
-          <strong class="bg-blur rounded text-danger">
-            Username Or Password is Already Used By Another User
-          </strong>
-        </h2>
-      </form>
+            <div class="button-holder d-flex justify-content-center">
+                <button type="submit" class="button btn-warning  mb-3" value="Register">Register</button>
+            </div>
+            <h2 th:if="${userNameOrEmailIsOccupied}" class="mt-5 text-center">
+                <strong class="bg-blur rounded text-danger">
+                    Username Or Password is Occupied
+                </strong>
+            </h2>
+
+        </form>
     </main>
-    <footer th:replace="fragments/common::footer"> </footer>
+    <footer th:replace="fragments/common::footer"></footer>
 
-  </div>
+</div>
 
 
 </body>
