--- a/pathfinder/src/main/resources/templates/routes.html
+++ b/pathfinder/src/main/resources/templates/routes.html
@@ -8,10 +8,10 @@
     <header th:replace="fragments/commons::nav"></header>
 
     <section th:each="r : ${routes}" th:object="${r}" class="road">
-        <img src="/images/pic4.jpg" alt="Title image">
+        <img th:src="*{routeFirstPicture.getUrl()}" alt="Title image">
         <div>
             <h2 th:text="*{name}">Your Route</h2>
-            <p th:text="*{description}">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae alias reiciendis deleniti possimus nemo
+            <p  th:text="*{#strings.substring(description,0,500) + '...'}" >Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae alias reiciendis deleniti possimus nemo
                 non repellendus?
                 Quae atque vero modi quidem! Autem cupiditate fugit doloribus ad amet, asperiores provident commodi.</p>
             <a th:href="@{routes/details/{id}(id=*{id})}" class="btn">Learn More</a>
