--- a/my.exam/src/main/resources/templates/home.html
+++ b/my.exam/src/main/resources/templates/home.html
@@ -6,7 +6,7 @@
 <main role="main">
     <div class="jumbotron">
         <h1 class="text-center p-5 text-white font-weight-bold">Battle</h1>
-        <form th:action="@{/fire/name1/name2}"  th:method="get" th:object="${names}"  class="row mb-2">
+        <form th:action="@{/fire}"  th:method="post" th:object="${ships}"  class="row mb-2">
             <div class="col-md-6">
                 <div class="card flex-md-row bg-blur mb-4 box-shadow h-md-250">
                     <div class="card-body d-flex flex-column align-items-start">
@@ -15,9 +15,9 @@
                             Select the attacker
                         </h3>
                         <div class="mb-1 text-white">You must select one of the logged-in users that owns a ship</div>
-                        <select  th:object="${name1}"  class="form-select mt-5" aria-label="Default select example">
+                        <select th:field="*{ship1}" class="form-select mt-5" aria-label="Default select example">
                             <option value="" selected>You must select one of the logged-in users that owns a ship</option>
-                            <option th:each="s : ${loggedUserShips}" th:object="${s}" th:text="${s}" th:value="${s}"  >One</option>
+                            <option th:each="s : ${loggedUserShips}"  th:text="${s.name}" th:value="${s.name}"  >One</option>
 
                         </select>
                     </div>
@@ -35,9 +35,9 @@
                             Select the defender
                         </h3>
                         <div class="mb-1 text-white">You must select one of the ships that is owned by another user</div>
-                        <select th:object="${name2}"   class="form-select mt-5" aria-label="Default select example">
+                        <select th:field="*{ship2}"   class="form-select mt-5" aria-label="Default select example">
                             <option value="" selected>You must select one of the ships that is owned by another user</option>
-                                <option  th:each="s : ${notLoggedUserShips}" th:object="${s}" th:text="${s}" th:value="${s}">One</option>
+                                <option  th:each="s : ${notLoggedUserShips}"  th:text="${s.name}" th:value="${s.name}">One</option>
 
                         </select>
                     </div>
@@ -47,7 +47,7 @@
                          data-holder-rendered="true" style="width: 200px; height: 250px;">
                 </div>
             </div>
-            <button th:href="@{fire/{name1}(name1={name1})/{name2}(name1={name2})}" type="submit" class="col-md-6 mx-auto btn btn-danger btn-lg btn-block mt-5 mb-5">FIRE !!!</button>
+            <button   type="submit" class="col-md-6 mx-auto btn btn-danger btn-lg btn-block mt-5 mb-5">FIRE !!!</button>
         </form>
         <div>
             <div class="col-md-6 mx-auto bg-blur rounded text-white">
