--- a/pathfinder/src/main/resources/templates/add-route.html
+++ b/pathfinder/src/main/resources/templates/add-route.html
@@ -3,97 +3,112 @@
 
 <head th:replace="fragments/commons::head"></head>
 <body>
-<!--<div class="wrapper">-->
-<!-- Navigation -->
-<header th:replace="fragments/commons::nav"></header>
+<div class="wrapper">
+    <!-- Navigation -->
+    <header th:replace="fragments/commons::nav"></header>
 
-<!-- Top Container -->
-<div class="row justify-content-center ">
-    <form id="add-route-form" class="w-50 rounded text-white mt-5"
-          action="/" 
-          method="/" enctype="multipart/form-data">
+    <!-- Top Container -->
+    <div class="row justify-content-center ">
+        <form id="add-route-form" class="w-50 rounded text-white mt-5"
+              th:action="@{/routes/add}"
+              th:method="post"
+              th:object="${routeAddBindingModel}" enctype="multipart/form-data">
 
-        <h3 class="border-left border-light pl-2">Add a new route</h3>
-        <div>
-            <div class="form-group">
-                <label for="inputName" class="col-form-label ">Name</label>
+            <h3 class="border-left border-light pl-2">Add a new route</h3>
+            <div>
+                <div class="form-group">
+                    <label for="inputName" class="col-form-label ">Name</label>
+                </div>
+                <div class="form-group">
+                    <input
+                            th:field="*{name}" th:errorclass="'is-invalid bg-danger'"
+                            name="name"
+                            required minlength="1" maxlength="20"
+                            type="text"
+                            id="inputName"
+                            class="form-control"
+                            aria-describedby="inputNameError">
+                    <small th:if="${#fields.hasErrors('name')}" th:errors="*{name}" id="inputNameError"
+                           class="invalid-feedback  rounded">Name length must be more than 3 characters</small>
+
+                </div>
             </div>
-            <div class="form-group">
-                <input name="name" 
-                       required minlength="5" maxlength="20"
-                       type="text"
-                       id="inputName"
-                       class="form-control"
-                       aria-describedby="inputNameError">
-                <small id="inputNameError"
-                       class="invalid-feedback bg-danger rounded">Name length must be more than 3 characters</small>
 
-            </div>
-        </div>
-
-        <div>
-            <div class="form-group">
-                <label for="inputDescription" class="col-form-label ">Description</label>
-            </div>
-            <div class="form-group">
-                    <textarea name="description" 
+            <div>
+                <div class="form-group">
+                    <label for="inputDescription" class="col-form-label ">Description</label>
+                </div>
+                <div class="form-group">
+                    <textarea th:field="*{description}" th:errorclass="'is-invalid bg-danger'" name="description"
                               required minlength="5"
                               id="inputDescription"
                               class="form-control"
                               aria-describedby="inputDescriptionError"></textarea>
-                <small id="inputDescriptionError"
-                       class="invalid-feedback  form-text bg-danger rounded">Description length must be more than 5
-                    characters</small>
+                    <small th:if="${#fields.hasErrors('description')}" th:errors="*{description}" id="inputDescriptionError"
+                           class="invalid-feedback  form-text  rounded">Description length must be more than 5
+                        characters</small>
+                </div>
             </div>
-        </div>
 
-        <div>
-            <div class="form-group">
-                <label for="inputGpx" class="col-form-label ">GPX Coordinates</label>
+            <div>
+                <div class="form-group">
+                    <label for="inputGpx" class="col-form-label ">GPX Coordinates</label>
+                </div>
+                <div class="form-group">
+                    <input th:field="*{gpxCoordinates}" th:errorclass="'is-invalid bg-danger'" type="file"
+                           name="gpxCoordinates"
+                           required
+                           id="inputGpx"
+                           class="form-control-file"
+                           aria-describedby="inputGpxError">
+                    <small th:if="${#fields.hasErrors('gpxCoordinates')}" th:errors="*{gpxCoordinates}" id="inputGpxError"
+                           class="invalid-feedback  form-text  rounded">Must be valid GPX Coordinates</small>
+                </div>
             </div>
-            <div class="form-group">
-                <input type="file" name="gpxCoordinates"
-					   required
-                       id="inputGpx"
-                       class="form-control-file"
-                       aria-describedby="inputGpxError">
-                <small id="inputGpxError"
-                       class="invalid-feedback  form-text bg-danger rounded">Must be valid GPX Coordinates</small>
+            <div>
+                <div class="form-group">
+                    <label for="level">Level</label>
+                    <select th:field="*{level}" id="level" class="custom-select">
+                        <option value="" selected >Select level</option>
+                        <option th:each="l : ${T(softuni.bg.pathfinder.model.entity.enums.LevelEnum).values()}"
+                                th:value="${l}" th:text="${l}" >Select level
+                        </option>
+                    </select>
+                </div>
             </div>
-        </div>
-        <div>
-            <div class="form-group">
-                <label for="level">Level</label>
-                <select id="level" class="custom-select">
-                    <option value="" selected>Select level</option>
-                    <option value="1" text="ADVANCED">Select level</option>
-                </select>
-            </div>
-        </div>
-        <div>
+            <div>
 
-            <div class="form-group">
-                <label for="videoUrl">Video Url (only last eleven characters from Youtube)</label>
-                <input id="videoUrl" type="text"
-                       class="form-control" placeholder="Video url">
+                <div class="form-group">
+                    <label for="videoUrl">Video Url (only last eleven characters from Youtube)</label>
+                    <input th:field="*{videoUrl}" id="videoUrl" type="text"
+                           class="form-control" placeholder="Video url">
+                </div>
+            </div>
+
+            <div>
+                <div class="form-group p-3">
+                    <label class="p-2" for="categories">Categories:</label>
+                    <input th:field="*{categories}"
+                           th:each="c : ${T(softuni.bg.pathfinder.model.entity.enums.CategoryNameEnum).values()}"
+                           th:text="${c}" th:value="${c}"
+                           class="m-3" type="checkbox" name="categories" id="categories"
+                           value="1" text="Category">
+                    <br>
+                </div>
+            </div>
+
+            <div class="d-flex justify-content-center mt-4">
+                <button  class="btn btn-primary btn-block w-50" type="submit">Add Route</button>
+            </div>
+
+        </form>
+    </div>
+    <footer class="footer bg-blur rounded">
+        <div class="container-fluid text-center">
+            <div class="h5 text-white">
+                &copy; Lucho, Chocho & Spring Advanced Students 2021. All rights reserved.
             </div>
         </div>
-
-        <div>
-            <div class="form-group p-3">
-                <label class="p-2" for="categories">Categories:</label>
-                <input class="m-3" type="checkbox" name="categories" id="categories"
-                       value="1" text="Category">
-				<br>
-            </div>
-        </div>
-
-        <div class="d-flex justify-content-center mt-4">
-            <button class="btn btn-primary btn-block w-50" type="submit">Add Route</button>
-        </div>
-
-    </form>
-</div>
-<footer th:replace="fragments/commons :: foot"></footer>
+    </footer>
 </body>
 </html>
