--- a/pathfinder/src/main/resources/templates/route-details.html
+++ b/pathfinder/src/main/resources/templates/route-details.html
@@ -15,15 +15,17 @@
             <h4>Difficulty Level (1-3):</h4>
             <div class="level">
                 <p><img class="level-img" src="/images/difficulty-level.png" alt=""></p>
-                <p><img class="level-img" src="/images/difficulty-level.png" alt=""></p>
-                <p><img class="level-img" src="/images/difficulty-level.png" alt=""></p>
+                <p><img th:if="${route.level.name() == 'INTERMEDIATE' or route.level.name=='ADVANCED'}"
+                        class="level-img" src="/images/difficulty-level.png" alt=""></p>
+                <p><img th:if="${route.level.name=='ADVANCED' }" class="level-img" src="/images/difficulty-level.png"
+                        alt=""></p>
 
             </div>
             <div>
                 <h4>Choose picture</h4>
                 <form
                         th:if="${@currentUser.isLoggedIn()}"
-                        action="/"
+                        action="@{/routes/details/{id}}"
                         method="POST" enctype="multipart/form-data">
                     <input type="hidden" id="id" name="routeId">
                     <div class="form-group">
@@ -43,7 +45,7 @@
                 </form>
             </div>
         </section>
-        <section  id="map">Map</section>
+        <section id="map">Map</section>
         <section id="video">
             <iframe id="frame" th:src="'https://www.youtube.com/embed/'+*{videoUrl}">
             </iframe>
@@ -53,8 +55,8 @@
             <p th:text="*{description}" id="route-description">Description: </p>
         </section>
         <section class="gallery">
-            <img class="rounded" src="/images/pic4.jpg" height="100%" alt="">
-            <img class="rounded" src="/images/pic1.jpg" height="100%" alt="">
+            <img th:each="p : *{pictures}" class="rounded" th:src="${p.getUrl()}" height="100%" alt="">
+
         </section>
         <section class="comments">
             <h1>Comments</h1>
